# temple

./: .gitignore  .goreleaser.yml  LICENSE  README.md  action.yml  go.mod  pyproject.toml  temple.toml
.github/workflows/: temple.yml
cmd/temple/: main.go
internal/: check.go  contract.go  deps.go  deps_test.go  files.go  glob.go  report.go  temple_test.go
temple/: __init__.py  core.py
tests/: test_core.py
